--- a/main.html
+++ b/main.html
@@ -75,7 +75,7 @@
                 <li><a href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
                 <li><a href="user.html" id="header_link_user"> User Administration</a></li>
                 <li><a href="settings.html" id="header_link_setting"> Settings</a></li>
-                <li><a href="info.html"> Help</a></li>
+                <li><a href="info.html"> Help desk</a></li>
             </ul>
         </div>
     </div>
