file name change

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
     </div>
     <section>
-        <div class="container-fluid">git 
+        <div class="container-fluid">
             <div class="row g-3">
                 <div class="col-lg-9">
                     <div class="p-4 main border main-border">
@@ -342,7 +342,7 @@
                 </div>
                 <div class="col-lg-12">
                     <div class="main main-border p-3">
-                        <label for="first" class="main-title fs-6 bold-label"><P></P>rogram Parameters</label>
+                        <label for="first" class="main-title fs-6 bold-label"> Program Parameters</label>
                         <div class="row g-3">
                             <div class="col-md-4">
                                 <div class="row g-3">
