width reduce of column

--- a/global.html
+++ b/global.html
@@ -90,8 +90,8 @@
         </nav>
         <section>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5 col-md-6">
                         <div class="card bg-main shadow h-100">
                             <div class="card-header text-center bg-secondary border-secondary">
                                 <label for="first" class="main-title fs-5 fw-bold mb-0 text-white">Global Counter Settings</label>
@@ -99,7 +99,7 @@
                             <div class="card-body">
                                 <div class="row program-section g-3">
                                     <div class="col">
-                                        <div class="">
+                                        <div class="text-center">
                                         <label class="form-check-label fw-bold" for="Counter">
                                             Counter
                                         </label>
@@ -187,8 +187,8 @@
                                         <div class="col-lg-6">
                                             <input class="form-control" id="life_count_set" type="text">
                                         </div>
-                                        <div class="col-lg-4">
-                                            <button class="btn bg-blue text-white mx-4 px-3 rounded-0" id="resetCounter" type="button">Reset Counter </button>
+                                        <div class="col-lg-4 text-center">
+                                            <button class="btn bg-blue text-white rounded-0" id="resetCounter" type="button">Reset Counter </button>
                                         </div>
                                         <div class="my-3" id="containerResetCounter" style="display: none;">
 
@@ -220,7 +220,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-5 col-md-6">
                         <div class="col-12">
                             <div class="card shadow bg-main ps-lg-0">
                                 <div class="card-header bg-secondary text-center">
@@ -229,7 +229,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="mt-1 row">  
-                                        <div class="d-flex justify-content-start align-items-center mb-3">
+                                        <div class="d-flex justify-content-center align-items-center mb-3">
                                             <div class="mx-2 fw-bold" id="stepper"> Stepper</div>
                                             <input class="form-check-input" id="stepper_setting" name="reweld" style="border: 1px solid;" type="checkbox">
                                         </div>
