--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <div class="menu collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item" ><a class="nav-link active" href="dashboard.html">Timer</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="log.html" id="header_link_diag">Log Data</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
                     <li class="nav-item" ><a class="nav-link" href="user.html" id="header_link_user"> User Administration</a></li>
                     <li class="nav-item" ><a class="nav-link" href="settings.html" id="header_link_setting"> Settings</a></li>
