--- a/log.html
+++ b/log.html
@@ -13,6 +13,10 @@
         td {
             white-space: nowrap;
         }
+        .overflow{
+            overflow: auto;
+            max-height: 550px !important;
+        }
        .nav-pills .active{
             width: 100% !important;
             color: white !important;
@@ -88,7 +92,7 @@
               </button>
             <div class="menu collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item" ><a class="nav-link" onclick="history.back()">Back</a></li>
+                    <!-- <li class="nav-item" ><a class="nav-link" onclick="history.back()">Back</a></li> -->
                     <li class="nav-item" ><a class="nav-link" href="global.html">Global Settings</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
                     <li class="nav-item" ><a class="nav-link" href="user.html" id="header_link_user"> User Administration</a></li>
@@ -100,22 +104,30 @@
         </nav>
         <section>
             <div class="container-fluid">
-                <div class="card bg-transparent border-0">
-                    <div class="card-header bg-transparent">
+              
+              <div class="card bg-transparent border-0 overflow" >
+                  <div class="card-header bg-transparent">
+                    <div class="row">
+                      <div class="col-lg-3">
+                        <a class="btn bg-blue text-white rounded-0 " href="manage-shift.html" type="button">Back </a>
+                      </div>
+                      <div class="col-lg-6">
                         <ul class="nav nav-pills justify-content-center py-1" id="pills-tab" role="tablist">
-                            <li class="nav-item" role="presentation">
-                              <button class="nav-link active text-dark" id="pills-log-tab" data-bs-toggle="pill" data-bs-target="#pills-log" type="button" role="tab" aria-controls="pills-log" aria-selected="true">Log Data</button>
-                            </li>
-                            <li class="nav-item" role="presentation">
-                              <button class="nav-link text-dark" id="pills-change-tab" data-bs-toggle="pill" data-bs-target="#pills-change" type="button" role="tab" aria-controls="pills-change" aria-selected="false">Change Log</button>
-                            </li>
-                            <li class="nav-item" role="presentation">
-                              <button class="nav-link text-dark" id="pills-error-tab" data-bs-toggle="pill" data-bs-target="#pills-error" type="button" role="tab" aria-controls="pills-error" aria-selected="false">Error Log</button>
-                            </li>
-                            <!-- <li class="nav-item" role="presentation">
-                              <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" disabled>Disabled</button>
-                            </li> -->
-                          </ul>
+                          <li class="nav-item" role="presentation">
+                            <button class="nav-link active text-dark" id="pills-log-tab" data-bs-toggle="pill" data-bs-target="#pills-log" type="button" role="tab" aria-controls="pills-log" aria-selected="true">Log Data</button>
+                          </li>
+                          <li class="nav-item" role="presentation">
+                            <button class="nav-link text-dark" id="pills-change-tab" data-bs-toggle="pill" data-bs-target="#pills-change" type="button" role="tab" aria-controls="pills-change" aria-selected="false">Change Log</button>
+                          </li>
+                          <li class="nav-item" role="presentation">
+                            <button class="nav-link text-dark" id="pills-error-tab" data-bs-toggle="pill" data-bs-target="#pills-error" type="button" role="tab" aria-controls="pills-error" aria-selected="false">Error Log</button>
+                          </li>
+                          <!-- <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" disabled>Disabled</button>
+                          </li> -->
+                        </ul>
+                      </div>
+                          </div>
                     </div>
                 </div>
                 <div class="card-body">
