new three page update

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li class="nav-item" ><a class="nav-link active" href="dashboard.html">Timer</a></li>
                     <li class="nav-item" ><a class="nav-link" href="log.html" id="header_link_diag">Log Data</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="user.html" id="header_link_user"> User Administration</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User Administration</a></li>
                     <li class="nav-item" ><a class="nav-link" href="settings.html" id="header_link_setting"> Settings</a></li>
                     <li class="nav-item" ><a class="nav-link" href="info.html"> Help </a></li>
                 </ul>
