--- a/global.html
+++ b/global.html
@@ -81,7 +81,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item" ><a class="nav-link active" href="#">Global Settings</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="user.html" id="header_link_user"> User Administration</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User Administration</a></li>
                     <li class="nav-item" ><a class="nav-link" href="settings.html" id="header_link_setting"> Settings</a></li>
                     <li class="nav-item" ><a class="nav-link" href="info.html"> Help </a></li>
                 </ul>
