--- a/manage-shift.html
+++ b/manage-shift.html
@@ -98,7 +98,7 @@
                     <li class="nav-item" ><a class="nav-link" href="global.html">Global Settings</a></li>
                     <li class="nav-item" ><a class="nav-link" href="settings.html" id="header_link_setting">Manage Shifts</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="user.html" id="header_link_user"> User Administration</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User Administration</a></li>
                     <li class="nav-item" ><a class="nav-link" href="info.html"> Help </a></li>
                 </ul>
             </div>
