--- a/update-shift.html
+++ b/update-shift.html
@@ -99,7 +99,7 @@
                                 Shifts</a></li>
                         <li class="nav-item"><a class="nav-link" href="diagnosis.html"
                                 id="header_link_diag">Diagnosis</a></li>
-                        <li class="nav-item"><a class="nav-link" href="user.html" id="header_link_user"> User
+                        <li class="nav-item"><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User
                                 Administration</a></li>
                         <li class="nav-item"><a class="nav-link" href="info.html"> Help </a></li>
                     </ul>
