--- a/update-shift.html
+++ b/update-shift.html
@@ -147,33 +147,43 @@
                     <div class="col-lg-9 col-md-12">
                         <div class="card bg-transparent border-0 shadow mt-3">
                             <div class="card-header text-center bg-secondary border-secondary">
-                                <label for="first" class="main-title fs-5 fw-bold mb-0 text-white">Data
-                                    Transfer</label>
+                                <label for="first" class="main-title fs-5 fw-bold mb-0 text-white">Report
+                                    </label>
                             </div>
                             <div class="card-body">
                                 <div class="row py-2">
-                                    <div class="col-md-4">
-                                        <label class="form-check-label fw-bold" for="TTD">
-                                            Timer To Database
-                                        </label>
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <input class="form-check-input" name="TTD" type="checkbox" value=""
-                                            id="TTD">
-                                    </div>
-                                </div>
-                                <div class="row py-2">
                                     <div class="col-lg-4">
 
-                                        <label class="form-label bold-label">Database To Timer</label>
+                                        <label class="form-label fw-bold">Select The Timer</label>
                                     </div>
                                     <div class="col-lg-8">
                                         <input type="text" class="form-control " name="DTT"
                                             placeholder="">
                                     </div>
-                                    <div class="div p-3 text-center">
-                                        <button class="btn bg-blue text-white rounded-0 " type="button">Save </button>
+                                </div>
+                                <div class="row py-2">
+                                    <div class="col-md-4">
+                                        <label class="form-label fw-bold" for="TTD">
+                                            Select The Date
+                                        </label>
                                     </div>
+                                    <div class="col-lg-4">
+                                        <label class="form-label fw-bold me-1" for="TTD">
+                                            From
+                                        </label>
+                                        <input class="" name="TTD" type="date" value=""
+                                            id="TTD">
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <label class="form-label fw-bold me-1" for="TTD">
+                                           To
+                                        </label>
+                                        <input class="" name="TTD" type="date" value=""
+                                            id="TTD">
+                                    </div>
+                                </div>
+                                <div class="div p-3 text-center">
+                                    <button class="btn bg-blue text-white rounded-0 " type="button">Download</button>
                                 </div>
                             </div>
                         </div>
