--- a/user-administrtation.html
+++ b/user-administrtation.html
@@ -85,12 +85,13 @@
         </button>
         <div class="menu collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="config.html"> Configuration </a></li>
+            <li class="nav-item"><a class="nav-link" href="dashboard.html" id="header_link_diag">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link active" href="#" id="header_link_user"> User
+                Admin..</a></li>
             <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
             <li class="nav-item"><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
-            <li class="nav-item"><a class="nav-link active" href="user-administrtation.html" id="header_link_user"> User
-                Admin..</a></li>
             <li class="nav-item"><a class="nav-link" href="settings.html" id="header_link_setting"> Settings</a></li>
-            <li class="nav-item"><a class="nav-link" href="info.html"> Help </a></li>
           </ul>
         </div>
       </div>
