--- a/diagnosis.html
+++ b/diagnosis.html
@@ -87,6 +87,7 @@
                 <div class="menu collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
+                        <li class="nav-item"><a class="nav-link" href="dashboard.html" id="header_link_diag">Dashboard</a></li>
                         <li class="nav-item"><a class="nav-link active" href="diagnosis.html"
                                 id="header_link_diag">Diagnosis</a></li>
                         <li class="nav-item"><a class="nav-link" href="user-administrtation.html" id="header_link_user">
@@ -94,7 +95,6 @@
                                 Administrtation</a></li>
                         <li class="nav-item"><a class="nav-link" href="settings.html" id="header_link_setting">
                                 Settings</a></li>
-                        <li class="nav-item"><a class="nav-link" href="info.html"> Help </a></li>
                     </ul>
                 </div>
             </div>
