--- a/global.html
+++ b/global.html
@@ -79,11 +79,11 @@
               </button>
             <div class="menu collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item" ><a class="nav-link active" href="#">Global Settings</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="config.html"> Configuration </a></li>
+                    <li class="nav-item" ><a class="nav-link active" href="global.html">Global Settings</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
                     <li class="nav-item" ><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User Administration</a></li>
                     <li class="nav-item" ><a class="nav-link" href="settings.html" id="header_link_setting"> Settings</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="info.html"> Help </a></li>
                 </ul>
             </div>
         </div>
@@ -124,7 +124,7 @@
                                     <div class="row bottom-margin justify-content-between align-items-center">
                                         <div class="col-lg-3">
                                             <label class="bold-label counter-font-size" for="tip_dress_set">Tip Dress</label>
-                                            <input class="form-check-input ms-2" id="tip_dress_active" name="" style="border: 1px solid;" type="checkbox">
+                                            <!-- <input class="form-check-input ms-2" id="tip_dress_active" name="" style="border: 1px solid;" type="checkbox"> -->
                                         </div>
                                         <div class="col-lg-2 ">
                                             <input class="form-control" id="tip_dress_set" type="text">
@@ -139,7 +139,7 @@
                                     <div class="row bottom-margin justify-content-between align-items-center">
                                         <div class="col-lg-3">
                                             <label class="bold-label counter-font-size" for="">Tip Change</label>
-                                            <input class="form-check-input ms-2" id="tip_change_active" name="" style="border: 1px solid;" type="checkbox">
+                                            <!-- <input class="form-check-input ms-2" id="tip_change_active" name="" style="border: 1px solid;" type="checkbox"> -->
                                         </div>
                                         <div class="col-lg-2 ">
                                             <input class="form-control" id="tip_change_set" type="text">
@@ -154,7 +154,7 @@
                                     <div class="row bottom-margin justify-content-between align-items-center">
                                         <div class="col-lg-3">
                                             <label class="bold-label counter-font-size" for="">Job Count</label>
-                                            <input class="form-check-input ms-2" id="job_count_active" name="" style="border: 1px solid;" type="checkbox">
+                                            <!-- <input class="form-check-input ms-2" id="job_count_active" name="" style="border: 1px solid;" type="checkbox"> -->
                                         </div>
                                         <div class="col-lg-2 ">
                                             <input class="form-control" id="job_count_set" type="text">
@@ -169,7 +169,7 @@
                                     <div class="row bottom-margin justify-content-between align-items-center">
                                         <div class="col-lg-3">
                                             <label class="bold-label counter-font-size" for="">Spot  Count</label>
-                                            <input class="form-check-input ms-2" id="Spot _count_active" name="" style="border: 1px solid;" type="checkbox">
+                                            <!-- <input class="form-check-input ms-2" id="Spot _count_active" name="" style="border: 1px solid;" type="checkbox"> -->
                                         </div>
                                         <div class="col-lg-2 ">
                                             <input class="form-control" id="Spot _count_set" type="text">
