--- a/log.html
+++ b/log.html
@@ -98,12 +98,12 @@
         <div class="menu collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <!-- <li class="nav-item" ><a class="nav-link" onclick="history.back()">Back</a></li> -->
-            <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
+            <li class="nav-item"><a class="nav-link" href="dashboard.html" id="header_link_diag">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link active" href="#" id="header_link_user"> Log Data</a>
+              <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
             <li class="nav-item"><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
-            <li class="nav-item"><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User Administration</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="settings.html" id="header_link_setting"> Settings</a></li>
-            <li class="nav-item"><a class="nav-link" href="info.html"> Help </a></li>
           </ul>
         </div>
       </div>
