--- a/manage-shift.html
+++ b/manage-shift.html
@@ -95,11 +95,12 @@
             <div class="menu collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <!-- <li class="nav-item" ><a class="nav-link" onclick="history.back()">Back</a></li> -->
-                    <li class="nav-item" ><a class="nav-link" href="global.html">Global Settings</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="settings.html" id="header_link_setting">Manage Shifts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="dashboard.html" id="header_link_diag">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="config.html" id="header_link_diag">Configuration</a></li>
+                    <li class="nav-item" ><a class="nav-link active" href="#" id="header_link_setting">Manage Shift</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="global.html">Global Settings</a></li>
                     <li class="nav-item" ><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User Administration</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="info.html"> Help </a></li>
                 </ul>
             </div>
         </div>
