--- a/settings.html
+++ b/settings.html
@@ -87,15 +87,16 @@
                 </button>
                 <div class="menu collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">Global Settings</a></li>
-                        <li class="nav-item"><a class="nav-link" href="diagnosis.html"
-                                id="header_link_diag">Diagnosis</a></li>
+                        <li class="nav-item"><a class="nav-link" href="config.html"> Configuration </a></li>
+                        <li class="nav-item"><a class="nav-link" href="dashboard.html" id="header_link_diag">Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="settings.html" id="header_link_setting">
+                            Settings</a></li>
+                            <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
+                        <li class="nav-item"><a class="nav-link" href="manage-shift.html"
+                                id="header_link_diag">Shift</a></li>
                         <li class="nav-item"><a class="nav-link" href="user-administrtation.html" id="header_link_user">
                                 User
                                 Administrtation</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="settings.html" id="header_link_setting">
-                                Settings</a></li>
-                        <li class="nav-item"><a class="nav-link" href="info.html"> Help </a></li>
                     </ul>
                 </div>
             </div>
@@ -116,7 +117,14 @@
                                         </label>
                                     </div>
                                     <div class="col-lg-8">
-                                        <input class="form-control" name="group" type="text" value="" id="group">
+                                        <select name="group" id="group" class="form-select">
+                                            <option value="1"> Group 1 </option>
+                                            <option value="2"> Group 2 </option>
+                                            <option value="3"> Group 3 </option>
+                                            <option value="4"> Group 4 </option>
+                                            <option value="5"> Group 5 </option>
+                                            <option value="6"> Group 6 </option>
+                                        </select>
                                     </div>
                                 </div>
                                 <div class="row align-item-center my-2">
@@ -199,6 +207,7 @@
                                             <input class="form-control" name="tcs" type="text" value="" id="tcs">
                                             <input class="form-control" name="tcs" type="text" value="" id="tcs">
                                             <input class="form-control" name="tcs" type="text" value="" id="tcs">
+                                            <input class="form-control" name="tcs" type="text" value="" id="tcs">
                                         </div>
                                     </div>
                                 </div>
@@ -227,6 +236,7 @@
                                     </div>
                                     <div class="col-9">
                                         <div class="d-flex">
+                                            <input class="form-control" name="tcs" type="text" value="" id="tcs">
                                             <input class="form-control" name="tcs" type="text" value="" id="tcs">
                                             <input class="form-control" name="tcs" type="text" value="" id="tcs">
                                             <input class="form-control" name="tcs" type="text" value="" id="tcs">
@@ -332,7 +342,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row py-1 justify-content-start align-items-center">
+                                <!-- <div class="row py-1 justify-content-start align-items-center">
                                     <div class="col-6">
                                         <div class="mx-0 fw-bold">Mains voltage of Last Weld</div>
                                     </div>
@@ -343,7 +353,7 @@
                                             <h5 class="ms-2">[V]</h5>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -433,16 +443,60 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="my-4 text-center">
-                    <div class="btn-group">
-                        <button type="button" id="save" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0">Update</button>
-                        <button type="button" id="send" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0">Send</button>
-                        <button class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0" onclick="history.back()" type="button"> Back </button>
-                        <button class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0" id="refresh" style="display: none;" type="button" onclick="doSyncFromTimer()">
-                                Refresh
-                        </button>
-                        <button type="button" id="btn_set_timer_time" onclick="setDateTime();" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0">Set Date Time</button>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="card bg-main shadow h-100">
+                            <div class="card-header text-center bg-secondary border-secondary">
+                                <label for="first" class="main-title fs-5 fw-bolder mb-0 text-white">Data Transfer</label>
+                            </div>
+                            <div class="card-body">
+                                <div class="row justify-content-center">
+                                    <div class="my-2">
+                                        <div class="p-0 form-check d-flex justify-content-center align-items-center">
+                                            <label class="form-check-label ms-1 bold-label" for="ttd">
+                                                Timer to Database
+                                            </label>
+                                            <input class="form-check-input border border-dark fs-4 mx-3" name="ttd" type="checkbox" value="" id="missing_sheet_detection_active">
+                                        </div>
+                                    </div>
+                                    <div class="my-2">
+                                        <div class="p-0 form-check d-flex justify-content-center align-items-center">
+                                            <label class="form-check-label ms-1 bold-label" for="dtt">
+                                               Database to Timer
+                                            </label>
+                                            <input class="form-check-input border border-dark fs-4 mx-3" name="dtt" type="checkbox" value="" id="missing_sheet_detection_active">
+                                        </div>
+                                    </div>
+                                    <div class="text-center my-2">
+                                        <button type="button" id="send" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0">Save</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="card bg-main shadow h-100">
+                            <div class="card-header text-center bg-secondary border-secondary">
+                                <label for="first" class="main-title fs-5 fw-bolder mb-0 text-white">RTC Date Configuration</label>
+                            </div>
+                            <div class="card-body">
+                                <div class="row justify-content-center h-100 align-items-center">
+                                    <div class="text-center my-2">
+                                        <button type="button" id="send" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0">Set Date Time</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="btn-group">
+                            <button type="button" id="save" class="btn bg-blue fw-bold text-white mx-1 rounded-0">Update</button>
+                            <button type="button" id="send" class="btn bg-blue fw-bold text-white mx-1 rounded-0">Send</button>
+                            <button class="btn bg-blue fw-bold text-white mx-1 rounded-0" onclick="history.back()" type="button"> Back </button>
+                            <button class="btn bg-blue fw-bold text-white mx-1 rounded-0" id="refresh" style="display: none;" type="button" onclick="doSyncFromTimer()">
+                                    Refresh
+                            </button>
+                            <button type="button" id="btn_set_timer_time" onclick="setDateTime();" class="btn bg-blue fw-bold text-white mx-1 rounded-0">Set Date Time</button>
+                        </div>
                     </div>
                 </div>
 
