--- a/config.html
+++ b/config.html
@@ -985,31 +985,31 @@
                         <ul class="nav flex-column">
                             <li class="nav-item">
                                 <button type="button" id="btnCreateNewProgram"
-                                    class="btn bg-blue fw text-white w-100 my-2 rounded-0 bold-label">New
+                                    class="btn bg-secondary fw text-white w-100 my-2 rounded-0 bold-label">New
                                     Program</button>
                             </li>
                             <li class="nav-item">
-                                <button type="button" class="btn bg-blue fw text-white w-100 my-2 rounded-0 bold-label"
+                                <button type="button" class="btn bg-secondary fw text-white w-100 my-2 rounded-0 bold-label"
                                     id="btnImportProgram">Import Program</button>
                             </li>
                             <li class="nav-item">
                                 <input type="file" style="display: none;" id="importInputFile">
                             </li>
                             <li class="nav-item">
-                                <button type="button" class="btn bg-blue fw text-white w-100 my-2 rounded-0 bold-label"
+                                <button type="button" class="btn bg-secondary fw text-white w-100 my-2 rounded-0 bold-label"
                                     id="btnCopyProgram" onclick="openCopyProgramModel();">Copy Program</button>
                             </li>
                             <li class="nav-item">
-                                <button type="button" class="btn bg-blue fw text-white w-100 my-2 rounded-0 bold-label"
+                                <button type="button" class="btn bg-secondary fw text-white w-100 my-2 rounded-0 bold-label"
                                     id="btnBackUp">Back Up</button>
                             </li>
                             <li class="nav-item">
-                                <button class="btn bg-blue fw text-white w-100 my-2 rounded-0 bold-label" id="btnGlobal"
+                                <button class="btn bg-secondary fw text-white w-100 my-2 rounded-0 bold-label" id="btnGlobal"
                                     type="button" onclick="window.location.href='global.html'">Global Settings</button>
                             </li>
                             <li class="nav-item">
                                 <button type="button" onclick="window.location.href='sequencePV.html'" id="btnSeqPV"
-                                    class="btn bg-blue fw text-white w-100 my-2 rounded-0 bold-label">Sequence
+                                    class="btn bg-secondary fw text-white w-100 my-2 rounded-0 bold-label">Sequence
                                     PV</button>
                             </li>
                             <!-- <li class="nav-item">
