--- a/data.html
+++ b/data.html
@@ -95,6 +95,8 @@
                     <ul class="navbar-nav">
                         <!-- <li class="nav-item" ><a class="nav-link" onclick="history.back()">Back</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
+                        <li class="nav-item"><a class="nav-link active" id="header_link_setting">Data
+                                </a></li>
                         <li class="nav-item"><a class="nav-link" href="manage-shift.html" id="header_link_setting">Manage
                                 Shifts</a></li>
                         <li class="nav-item"><a class="nav-link" href="diagnosis.html"
